# MemoryRaven

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: consciousness-preservation-technical.md  getting-started.md
examples/: quick_start.py  raven_mining.py
src/memory_empire/memory_os/: autocapture.py  memory_search.py  retrieval.py
src/memory_empire/vector_indexing/: embeddings.py  vector_store.py
