[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-empire"
version = "0.1.0"
description = "The Memory Empire Framework - Persistent memory infrastructure for AI agents"
readme = "README.md"
authors = [{name = "Raven"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "memory", "agents", "llm", "knowledge-graph", "vector-search", "rag", "persistence"]
dependencies = [
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "numpy>=1.24.0",
    "aiofiles>=22.0.0",
    "asyncio>=3.4.3",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "xxhash>=3.0.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
all = [
    "memory-empire[vector]",
    "memory-empire[embeddings]",
    "memory-empire[api]",
    "memory-empire[cloud]",
]
vector = [
    "qdrant-client>=1.7.0",
    "chromadb>=0.4.0",
    "faiss-cpu>=1.7.0",
]
embeddings = [
    "sentence-transformers>=2.2.0",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
]
cloud = [
    "redis>=4.5.0",
    "boto3>=1.26.0",
    "azure-storage-blob>=12.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]

[project.urls]
Homepage = "https://memoryempire.ai"
Documentation = "https://docs.memoryempire.ai"
Repository = "https://github.com/ravenbadbihh/MemoryRaven"
"Bug Tracker" = "https://github.com/ravenbadbihh/MemoryRaven/issues"
"Discord" = "https://discord.gg/XXX"

[project.scripts]
memory-empire = "memory_empire.cli:main"
vks = "memory_empire.vector_indexing.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["memory_empire"]

[tool.setuptools.package-data]
memory_empire = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["memory_empire"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false